--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300&display=swap" rel="stylesheet">
@@ -59,10 +61,62 @@
         <p>
             <a class="pinkBtn" href="#">Read More</a>
            
-           </p>
+        </p>
     </div>
 </section>
 
+<section class="services">
+    <h1 class="center">
+        Awesome Quality Services
+    </h1>
+
+    <div class="services flex">
+        <div class="item  half-width">
+            <div class="flex">
+                <div>
+                    <i class="fas fa-laptop"></i>
+                </div>
+                <div>
+                    <h3>Web Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eligendi voluptatibus dolorum doloremque architecto illo est nemo modi asperiores libero?</p>
+                </div>
+            </div>
+            <div class="flex">
+                <div>
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+                <div>
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eligendi voluptatibus dolorum doloremque architecto illo est nemo modi asperiores libero?</p>
+                </div>
+            </div>
+        </div>
+        <div class="item  half-width">
+            <div class="flex">
+                <div>
+                    <i class="fab fa-android"></i>
+                </div>
+                <div>
+                    <h3>App Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eligendi voluptatibus dolorum doloremque architecto illo est nemo modi asperiores libero?</p>
+                </div>
+            </div>
+            <div class="flex">
+                <div>
+                    <i class="fab fa-apple"></i>
+                </div>
+                <div>
+                    <h3>App Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eligendi voluptatibus dolorum doloremque architecto illo est nemo modi asperiores libero?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+</section>
 
 </body>
 </html>
